[package]
name = "bevy_spatial_boids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
bevy_spatial = "0.8.0"
halton = "0.2.1"
rand = "0.9.0-alpha.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
